# keroloader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  make_unicorn_android.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/alula/keroloader2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/alula/keroloader2/: DoukutsuDocumentsProvider.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/alula/keroloader2/: ExampleUnitTest.java
src/: common.h  emulator.cpp  exports.cpp  exports.h  exports_comctl32.cpp  exports_d3d9.cpp  exports_dsound.cpp  exports_kernel32.cpp  exports_msvcrt.cpp  exports_shlwapi.cpp  exports_steam_api.cpp  exports_user32.cpp  exports_winmm.cpp  gstw_table.cpp  main.cpp  sokol_pipeline.h  utils.cpp
src/pe-parse/: buffer.cpp  parse.cpp  unicode_codecvt.cpp
src/sokol/: sokol_impl.cpp
src/tinyalloc/: tinyalloc.cpp  tinyalloc.h
src/windows/: dxerror.h  winerror.h
src/x86/: dispatcher.asm
utils/: dump_gstw_table.c
